--- a/static/style.css
+++ b/static/style.css
@@ -210,7 +210,6 @@ body {
     .form .buttons .btn {
         width: 100%;
         height: 70%;
-        padding: 12px;
         background: #5163EB;
         color: white;
         font-size: 18px;
@@ -219,6 +218,10 @@ body {
         cursor: pointer;
         transition: 0.2s;
         border: 2px solid #5163EB ;
+        text-decoration: none;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
     
     .form .buttons .btn:hover {
@@ -238,6 +241,7 @@ body {
         cursor: pointer;
         transition: 0.2s;
         border: 2px solid #5163EB ;
+        text-decoration: none;
     }
     
     .form .button .btn:hover {
