--- a/src/routes/register/components/RegisterForm/RegisterForm.scss
+++ b/src/routes/register/components/RegisterForm/RegisterForm.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  height: 500px;
+  height: 400px;
   width: 360px;
 
   &__name-input {
@@ -34,4 +34,26 @@
       accent-color: black;
     }
   }
+}
+
+// Стили для ошибок
+
+.error-message {
+  color: red;
+  font-size: 12px;
+  margin-top: 5px;
+  width: 100%;
+  text-align: left;
+}
+
+.form-errors-container {
+  width: 360px;
+  margin-bottom: 20px;
+}
+
+.error-list {
+  background-color: #ffffff;
+  border: 2px solid red;
+  border-radius: 8px;
+  padding: 15px;
 }
