--- a/src/app/components/MainLayout/MainLayout.hbs
+++ b/src/app/components/MainLayout/MainLayout.hbs
@@ -3,10 +3,10 @@
         <a class="main-layout__logo logo"><img alt="Логотип" class="logo__image" src="">flintmail</a>
         <div class="main-layout__action-wrapper">
             <form class="main-layout__search-form" action="">
-                <input class="main-layout__search-field" type="text">
+                <input class="main-layout__search-field" type="text" placeholder="Поиск">
             </form>
             <div class="main-layout__profile-button profile-button">
-                <img class="profile-button__image" alt="Аватарка пользователя">
+                <img class="profile-button__image" src="img/avatar.svg" alt="Аватар пользователя">
             </div>
         </div>
     </header>
