--- a/src/routes/inbox/views/InboxPage.hbs
+++ b/src/routes/inbox/views/InboxPage.hbs
@@ -1,1 +1,9 @@
-!CONTENT!
+<div class="inbox-browser-conteiner">
+   {{#each folder}}
+        <div class="foder-browser-item">{{this}}</div>
+    {{/each}}
+   {{{folders}}}
+</div>
+<div class="message-list-conteiner">
+    {{{messages}}}
+</div>
