--- a/src/routes/register/components/RegisterForm/RegisterForm.scss
+++ b/src/routes/register/components/RegisterForm/RegisterForm.scss
@@ -34,26 +34,12 @@
       accent-color: black;
     }
   }
+  &__name-input-error-message{
+    display: block;
+    &:visible {
+      display: flex;
+      color: red;
+    }
+  }
 }
 
-// Стили для ошибок
-
-.error-message {
-  color: red;
-  font-size: 12px;
-  margin-top: 5px;
-  width: 100%;
-  text-align: left;
-}
-
-.form-errors-container {
-  width: 360px;
-  margin-bottom: 20px;
-}
-
-.error-list {
-  background-color: #ffffff;
-  border: 2px solid red;
-  border-radius: 8px;
-  padding: 15px;
-}
