попытка сделать сайд меню

--- a/src/app/components/MainLayout/MainLayout.hbs
+++ b/src/app/components/MainLayout/MainLayout.hbs
@@ -14,3 +14,9 @@
         {{{content}}}
     </main>
 </div>
+
+<div class="main-layout__inbox">
+    <div class="main-layout__window">
+            
+    </div>
+</div>
