--- a/src/app/components/AuthLayout/AuthLayout.hbs
+++ b/src/app/components/AuthLayout/AuthLayout.hbs
@@ -1,6 +1,9 @@
 <div class="auth-layout">
-    <div class="auth-layout__container">
-        <a class="auth-layout__logo logo"><img alt="Логотип" class="logo__image" src="">flintmail</a>
-        {{{content}}}
+    <div class="auth-layout__panel">
+        <a class="auth-layout__logo" data-slot="logo" href="#">
+            <img alt="Flintmail" class="auth-layout__logo-icon" src="/img/logo.svg" />
+            <span class="auth-layout__logo-text">flintmail</span>
+        </a>
+        <div class="auth-layout__content" data-slot="content"></div>
     </div>
 </div>
