--- a/src/app/components/MainLayout/MainLayout.hbs
+++ b/src/app/components/MainLayout/MainLayout.hbs
@@ -1,16 +1,10 @@
 <div class="main-layout">
-    <header class="main-layout__header">
-        <a class="main-layout__logo logo"><img alt="Логотип" class="logo__image" src="">flintmail</a>
-        <div class="main-layout__action-wrapper">
-            <form class="main-layout__search-form" action="">
-                <input class="main-layout__search-field" type="text">
-            </form>
-            <div class="main-layout__profile-button profile-button">
-                <img class="profile-button__image" alt="Аватарка пользователя">
-            </div>
-        </div>
-    </header>
-    <main class="main-layout__main">
-        {{{content}}}
-    </main>
+    <header data-slot="header" class="main-layout__header"></header>
+
+    <div class="main-layout__container">
+        <aside data-slot="sidebar" class="main-layout__sidebar"></aside>
+        <main data-slot="main" class="main-layout__main"></main>
+    </div>
+
+    <div data-slot="modal" class="main-layout__modal-root"></div>
 </div>
