--- a/src/routes/register/views/RegisterPage.scss
+++ b/src/routes/register/views/RegisterPage.scss
@@ -1,29 +1,33 @@
 .register-page {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: stretch;
+  text-align: left;
+  height: 100%;
 
-  &__header {
-    margin-top: 37px;
-    font-size: 40px;
-    font-weight: 600;
+  &__title {
+    font-size: 36px;
+    font-weight: 700;
+    margin-bottom: 32px;
+    color: #1f2937;
+    text-align: left;
   }
 
-  &__already-registered-container {
-    margin-top: 24px;
-    width: 80%;
+  &__form {
     display: flex;
-    justify-content: space-around;
-    align-items: center;
+    flex-direction: column;
+    gap: 28px;
+    flex: 1;
   }
 
-  &__auth-link {
-    color: #5163EB;
-    font-size: 24px;
-    font-weight: 600;
+  &__actions {
+    margin-top: 24px;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
 
-    &:hover {
-      cursor: pointer;
+    .ui-button {
+      width: 100%;
     }
   }
 }
